--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Rhymes for the Young Folk
 url: http://www.gutenberg.org/ebooks/46702
